	       JSBML NEWS -- History of user-visible changes
======================================================================
Version 0.8.1 (xx-xx-2012)
======================================================================

* New Features:
  
  - Some additional methods for more convenient working with tree data
    structures in TreeNodeWithChangeSupport.
  
* Bug Fixes:

  - Several improvements and corrections in the work with 
    TreeNodeChangeListeners. In many cases listeners were notified too
    early or sometimes even not at all because of inconsistent
    notification mechanisms.

======================================================================
Version 0.8 (24-08-2012)
======================================================================

* New Features:
  
  - The new specialized EventObject TreeNodeRemovedEvent has been
    implemented in order to make sure that deleted nodes do no longer
    have a pointer to their previous parent within the tree. At the
    same time, it is still possible to identify their previous
    location using the field in the new EventObject. For people using
    already the change listeners it means one API change that could break
    existing code.

* Bug Fixes:

  - The ASTNode methods insertChild, replaceChild, prependChild have
    been corrected to setup correctly the parentSBMLObject in the added 
    ASTNode tree. Thanks to Jason Stevens who reported the problem. 
  
  - When creating an ASTNode with a CallableSBase or using the setVariable
    method, the reference to the id of the CallableSBase was not stored.
	       
  - There is now a rounding correction for multipliers when merging units
    that tries to shift multipliers to the scale of a unit. This can only
    be done if the logarithm to the base 10 of the multiplier is nearly
    an integer number. Nearly means that the distance to the next integer
    is not larger than the ensured double precision.
